# LOB-predictorium

./: .gitattributes  main.ipynb  main.py  pyproject.toml
competition_package/: ._datasets
competition_package/datasets/: ._train.parquet  train.parquet  valid.parquet
competition_package/example_solution/: ._baseline.onnx  ._solution.py  baseline.onnx  solution.py
runs/exp_001/: best.pt  scalers.json
runs/good_run_simpleDL/: best.pt
src/: __init__.py  basic_dl_classes.py  dataclass.py  my_DL_models.py  my_models.py  report.py  sarima_parameters.py  seasonality.py
