[project]
name = "lob-predictorium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.4",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.4.0",
    "tqdm>=4.67.3",
]
[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
[tool.uv.extra-build-dependencies]
sktime = ["setuptools<=70.0.0"]
